--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
   <modules>
     <module>common-base</module>
     <module>common-base-test</module>
+    <module>common-base-web</module>
+    <module>common-base-webflux</module>
+    <module>common-base-ldaptive</module>
   </modules>
 
   <properties>
