--- a/common-base-servlet/pom.xml
+++ b/common-base-servlet/pom.xml
@@ -10,10 +10,10 @@
     <version>1.3.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>common-base-ldaptive</artifactId>
+  <artifactId>common-base-servlet</artifactId>
 
-  <name>common-base-ldaptive</name>
-  <description>Common Base Ldaptive</description>
+  <name>common-base-servlet</name>
+  <description>Common Base Servlet</description>
 
   <dependencies>
     <dependency>
@@ -23,20 +23,37 @@
     </dependency>
 
     <dependency>
-      <groupId>org.ldaptive</groupId>
-      <artifactId>ldaptive</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.ldaptive</groupId>
-      <artifactId>ldaptive-beans</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <optional>true</optional>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-jose</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-resource-server</artifactId>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <optional>true</optional>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -67,6 +84,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
