--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.6-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -27,8 +27,8 @@
   </modules>
 
   <properties>
+    <github.repo>common-base</github.repo>
     <common-model.version>1.1.2</common-model.version>
-    <ldaptive.version>1.2.4</ldaptive.version>
   </properties>
 
   <scm>
@@ -49,9 +49,7 @@
     </snapshotRepository>
     <site>
       <id>bremersee-sites</id>
-      <url>
-        dav:https://nexus.bremersee.org/repository/maven-sites/common-base/${project.version}
-      </url>
+      <url>${site-url}</url>
     </site>
   </distributionManagement>
 
@@ -61,27 +59,6 @@
         <groupId>org.bremersee</groupId>
         <artifactId>common-model</artifactId>
         <version>${common-model.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.ldaptive</groupId>
-        <artifactId>ldaptive</artifactId>
-        <version>${ldaptive.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.ldaptive</groupId>
-        <artifactId>ldaptive-beans</artifactId>
-        <version>${ldaptive.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.ldaptive</groupId>
-        <artifactId>ldaptive-unboundid</artifactId>
-        <version>${ldaptive.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
