--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.9</version>
     <relativePath/>
   </parent>
 
@@ -28,7 +28,9 @@
 
   <properties>
     <github.repo>common-base</github.repo>
-    <common-model.version>1.1.2</common-model.version>
+    <!--suppress UnresolvedMavenProperty -->
+    <gh-pages-staging-dir>${maven.multiModuleProjectDirectory}/target/staging</gh-pages-staging-dir>
+    <common-model.version>1.1.5</common-model.version>
   </properties>
 
   <scm>
@@ -49,7 +51,9 @@
     </snapshotRepository>
     <site>
       <id>bremersee-sites</id>
-      <url>${site-url}</url>
+      <url>
+        dav:https://nexus.bremersee.org/repository/maven-sites/${github.repo}/${project.version}
+      </url>
     </site>
   </distributionManagement>
 
