--- a/common-base-reactive/pom.xml
+++ b/common-base-reactive/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
