--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <github.repo>common-base</github.repo>
     <!--suppress UnresolvedMavenProperty -->
     <gh-pages-staging-dir>${maven.multiModuleProjectDirectory}/target/staging</gh-pages-staging-dir>
-    <common-model.version>1.1.6</common-model.version>
+    <common-model.version>1.1.7-SNAPSHOT</common-model.version>
   </properties>
 
   <scm>
