--- a/common-base-test/pom.xml
+++ b/common-base-test/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-base-parent</artifactId>
-    <version>1.3.2-SNAPSHOT</version>
+    <version>2.0.0-SNAPSOT</version>
   </parent>
 
   <artifactId>common-base-test</artifactId>
