--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>1.0.10</version>
+    <version>1.0.11</version>
     <relativePath/>
   </parent>
 
@@ -30,7 +30,7 @@
     <github.repo>common-base</github.repo>
     <!--suppress UnresolvedMavenProperty -->
     <gh-pages-staging-dir>${maven.multiModuleProjectDirectory}/target/staging</gh-pages-staging-dir>
-    <common-model.version>1.1.7-SNAPSHOT</common-model.version>
+    <common-model.version>1.1.7</common-model.version>
   </properties>
 
   <scm>
