--- a/common-base-ldaptive/pom.xml
+++ b/common-base-ldaptive/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>1.3.3</version>
   </parent>
 
   <artifactId>common-base-ldaptive</artifactId>
