--- a/common-base-ldaptive-autoconfigure/pom.xml
+++ b/common-base-ldaptive-autoconfigure/pom.xml
@@ -2,24 +2,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
   <parent>
-    <groupId>org.bremersee</groupId>
     <artifactId>common-base-parent</artifactId>
+    <groupId>org.bremersee</groupId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>common-base-ldaptive</artifactId>
+  <artifactId>common-base-ldaptive-autoconfigure</artifactId>
 
-  <name>common-base-ldaptive</name>
-  <description>Common Base Ldaptive</description>
+  <name>common-base-ldaptive-autoconfigure</name>
+  <description>Common Base Ldaptive Auto-Configuration</description>
 
   <dependencies>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>org.bremersee</groupId>
-      <artifactId>common-base</artifactId>
+      <artifactId>common-base-ldaptive</artifactId>
       <version>${project.version}</version>
+      <optional>true</optional>
       <exclusions>
         <exclusion>
           <groupId>org.springframework</groupId>
@@ -28,44 +37,19 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ldaptive</groupId>
-      <artifactId>ldaptive</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.ldaptive</groupId>
-      <artifactId>ldaptive-beans</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
-
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-devtools</artifactId>
-      <scope>runtime</scope>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.ldaptive</groupId>
+      <artifactId>ldaptive-unboundid</artifactId>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
@@ -88,11 +72,5 @@
       <artifactId>unboundid-ldapsdk</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.ldaptive</groupId>
-      <artifactId>ldaptive-unboundid</artifactId>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
-
 </project>
