--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
   <modules>
     <module>common-base</module>
     <module>common-base-test</module>
+    <module>common-base-autoconfigure</module>
+    <module>common-base-starter</module>
     <module>common-base-servlet</module>
     <module>common-base-reactive</module>
     <module>common-base-ldaptive</module>
