Multi-module with one autoconfigure module

--- a/common-base-webmvc-starter/pom.xml
+++ b/common-base-webmvc-starter/pom.xml
@@ -2,18 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>common-base-ldaptive-starter</artifactId>
+  <artifactId>common-base-webmvc-starter</artifactId>
 
-  <name>common-base-ldaptive-starter</name>
-  <description>Common Base Ldaptive Spring Boot Starter</description>
+  <name>common-base-webmvc-starter</name>
+  <description>Common Base Web MVC Starter</description>
 
   <dependencies>
     <dependency>
@@ -23,23 +22,8 @@
     </dependency>
     <dependency>
       <groupId>org.bremersee</groupId>
-      <artifactId>common-base-ldaptive</artifactId>
+      <artifactId>common-base-webmvc</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.ldaptive</groupId>
-      <artifactId>ldaptive-unboundid</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-ldap</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
