--- a/common-base-starter/pom.xml
+++ b/common-base-starter/pom.xml
@@ -2,43 +2,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>common-base-ldaptive-starter</artifactId>
+  <artifactId>common-base-starter</artifactId>
 
-  <name>common-base-ldaptive-starter</name>
-  <description>Common Base Ldaptive Spring Boot Starter</description>
+  <name>common-base-starter</name>
+  <description>Common Base Starter</description>
 
   <dependencies>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.bremersee</groupId>
-      <artifactId>common-base-starter</artifactId>
+      <artifactId>common-base-autoconfigure</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.bremersee</groupId>
-      <artifactId>common-base-ldaptive</artifactId>
+      <artifactId>common-base</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.ldaptive</groupId>
-      <artifactId>ldaptive-unboundid</artifactId>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-ldap</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
