--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,16 @@
     <module>common-base-feign</module>
     <module>common-base-ldaptive</module>
     <module>common-base-thymeleaf</module>
+
     <module>common-base-autoconfigure</module>
+
+    <module>common-base-starter</module>
     <module>common-base-ldaptive-starter</module>
+    <module>common-base-web-starter</module>
+    <module>common-base-webflux-starter</module>
+    <module>common-base-webmvc-starter</module>
+    <module>common-base-thymeleaf-starter</module>
+    <module>common-base-security-starter</module>
   </modules>
 
   <properties>
