--- a/common-base-ldaptive-starter/pom.xml
+++ b/common-base-ldaptive-starter/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>1.4.0-SNAPSHOT</version>
+    <version>1.4.0</version>
   </parent>
 
   <artifactId>common-base-ldaptive-starter</artifactId>
