--- a/common-base-autoconfigure/pom.xml
+++ b/common-base-autoconfigure/pom.xml
@@ -5,9 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>1.4.0</version>
+    <artifactId>common-base-parent</artifactId>
+    <version>1.4.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>common-base-autoconfigure</artifactId>
