--- a/common-base-web/pom.xml
+++ b/common-base-web/pom.xml
@@ -2,12 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>common-base-parent</artifactId>
-    <groupId>org.bremersee</groupId>
-    <version>1.4.0</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.bremersee</groupId>
+    <artifactId>common-base-parent</artifactId>
+    <version>1.4.1-SNAPSHOT</version>
+  </parent>
 
   <artifactId>common-base-web</artifactId>
 
