--- a/common-base-web-starter/pom.xml
+++ b/common-base-web-starter/pom.xml
@@ -26,5 +26,16 @@
       <artifactId>common-base-web</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
