--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
   <modules>
     <module>common-base</module>
+    <module>common-base-data</module>
     <module>common-base-web</module>
     <module>common-base-webmvc</module>
     <module>common-base-security</module>
