--- a/common-base-security-starter/pom.xml
+++ b/common-base-security-starter/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-base-parent</artifactId>
-    <version>1.4.2</version>
+    <version>1.4.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>common-base-security-starter</artifactId>
