Adds auto configuration for acl stuff and model mapper.
(cherry picked from commit cf956433e6cc5100e369e74b9d227e1000efde6d)

--- a/common-base-autoconfigure/pom.xml
+++ b/common-base-autoconfigure/pom.xml
@@ -32,6 +32,11 @@
       <version>${project.version}</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <optional>true</optional>
+    </dependency>
 
     <dependency>
       <groupId>org.bremersee</groupId>
