--- a/common-base-starter/pom.xml
+++ b/common-base-starter/pom.xml
@@ -30,6 +30,10 @@
       <artifactId>common-base</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
