--- a/common-base-web/pom.xml
+++ b/common-base-web/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-base-parent</artifactId>
-    <version>1.4.4-SNAPSHOT</version>
+    <version>1.4.4</version>
   </parent>
 
   <artifactId>common-base-web</artifactId>
