--- a/common-base-security-starter/pom.xml
+++ b/common-base-security-starter/pom.xml
@@ -26,6 +26,10 @@
       <artifactId>common-base-security</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
