--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>1.1.4</version>
+    <version>1.1.5-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
   <artifactId>common-base-parent</artifactId>
-  <version>1.4.6</version>
+  <version>1.4.7-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>common-base-parent</name>
