--- a/common-base-minio/pom.xml
+++ b/common-base-minio/pom.xml
@@ -93,11 +93,6 @@
     </dependency>
 
     <dependency>
-      <groupId>eu.maxschuster</groupId>
-      <artifactId>dataurl</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
@@ -119,6 +114,11 @@
           <artifactId>junit-vintage-engine</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>io.projectreactor</groupId>
+      <artifactId>reactor-test</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
