--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.1</version>
     <relativePath/>
   </parent>
 
@@ -28,6 +28,7 @@
     <module>common-base-webflux</module>
     <module>common-base-feign</module>
     <module>common-base-ldaptive</module>
+    <module>common-base-ldaptive-security</module>
     <module>common-base-minio</module>
     <module>common-base-thymeleaf</module>
 
